Fix link layout on mobile

--- a/styles/xebialabs.css
+++ b/styles/xebialabs.css
@@ -166,6 +166,10 @@ form.form-search:before {
     outline: none;
 }
 
+.dashboard .filters span {
+    display: inline-block;
+}
+
 .dashboard .label {
     font-weight: 400;
     margin-bottom: 5px;
@@ -212,4 +216,10 @@ form.form-search:before {
 
 .bg-plugin {
     background-color: #25a29f;
+}
+
+.square-logo {
+    margin: 5px 50px 10px 0px;
+    display: inline-block;
+    height: 45px;
 }
